<resources>
    <string name="app_name">Bird Identifier</string>

    <string name="dummy_text">Dummy Text 2</string>
    <string name="load_image">Load Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="output">Output:-</string>
    <string name="result">Result Here</string>
    <string name="click_to_search">Click on the result to search image on google</string>
    <string name="default_image">default Image</string>
</resources>