<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images12"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/animation_view"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    app:lottie_rawRes="@raw/birds_anim" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UseLessParent">

        <ImageView
            android:id="@+id/iv_add_image"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/default_image"
            />
        
        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_add_image"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_load_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#3949AB"
                android:text="@string/load_image"
                android:textColor="@color/white">
            </androidx.appcompat.widget.AppCompatButton>
<!--            <ImageView-->
<!--                android:id="@+id/btn_camera"-->
<!--                android:layout_width="65dp"-->
<!--                android:layout_height="65dp"-->
<!--                android:src="@drawable/ic_baseline_photo_camera_24"-->
<!--                />-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output"
                    android:textColor="@color/yellow"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="10"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:id="@+id/result_here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/result"
                    android:textSize="20sp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="10"
                    android:textStyle="bold"
                    android:textColor="@color/yellow"
                    >

                </TextView>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_search"
                android:id="@+id/clicktosearch"
                android:textSize="18sp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="10"
                android:textColor="@color/yellow"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>




    </RelativeLayout>
</RelativeLayout>
